update infraenv creation
Signed-off-by: Jilju Joy <jijoy@redhat.com>

--- a/ocs_ci/templates/hosted-cluster/infra-env.yaml
+++ b/ocs_ci/templates/hosted-cluster/infra-env.yaml
@@ -11,7 +11,7 @@ spec:
   agentLabels:
     'agentclusterinstalls.extensions.hive.openshift.io/location': localagents
   pullSecretRef:
-    name: pull-secret-agents
+    name: pull-secret
   sshAuthorizedKey: ssh-public-key-value
   nmStateConfigLabelSelector:
       matchLabels:
