--- a/conf/ocsci/dr_workload.yaml
+++ b/conf/ocsci/dr_workload.yaml
@@ -104,14 +104,25 @@ ENV_DATA:
     },
   ]
   dr_workload_discovered_apps_rbd: [
-    { name: "busybox-dict-1", workload_dir: "rdr/busybox/rbd/workloads/app-busybox-1",
+    { name: "busybox-dict-1-rbd", workload_dir: "rdr/busybox/rbd/workloads/app-busybox-1",
       pod_count: 10, pvc_count: 10,
       dr_workload_app_pod_selector_key: "workloadpattern",
       dr_workload_app_pod_selector_value: "simple_io",
       dr_workload_app_pvc_selector_key: "appname",
       dr_workload_app_pvc_selector_value: "busybox_app1",
-      workload_namespace: "busybox-dict-1",
-      dr_workload_app_placement_name: "busybox-dict-1"
+      workload_namespace: "busybox-dict-1-rbd",
+      dr_workload_app_placement_name: "busybox-dict-1-rbd"
+    }
+  ]
+  dr_workload_discovered_apps_cephfs: [
+    { name: "busybox-dict-1-cephfs", workload_dir: "rdr/busybox/cephfs/workloads/app-busybox-1",
+      pod_count: 10, pvc_count: 10,
+      dr_workload_app_pod_selector_key: "workloadpattern",
+      dr_workload_app_pod_selector_value: "simple_io",
+      dr_workload_app_pvc_selector_key: "appname",
+      dr_workload_app_pvc_selector_value: "busybox_app1_cephfs",
+      workload_namespace: "busybox-dict-1-cephfs",
+      dr_workload_app_placement_name: "busybox-dict-1-cephfs"
     }
   ]
   dr_workload_subscription_placement_rbd: [
