FDF unreleased deployment support (#11404)
* FDF unreleased deployment support
* Fix Fusion pre-release catalogsource template
* Change pre-ga terminology to pre-release and document config items
* Add version specific conf files for fdf
* Extract idms.yaml from image
* Add skopeo to container creation
* Add doc for Fusion and FDF deployments
* Add final verification log statement
* Fix additional fusion configs

---------

Signed-off-by: Coady LaCroix <clacroix@redhat.com>

--- a/conf/ocsci/fdf_deployment.yaml
+++ b/conf/ocsci/fdf_deployment.yaml
@@ -1,7 +1,7 @@
 DEPLOYMENT:
   fusion_deployment: True
   fdf_deployment: True
-  channel: v2.0
+  fusion_channel: v2.0
 
 ENV_DATA:
   skip_ocs_deployment: true
