--- a/conf/ocsci/fusion_pre_release_deployment.yaml
+++ b/conf/ocsci/fusion_pre_release_deployment.yaml
@@ -1,9 +1,9 @@
 DEPLOYMENT:
-  fusion_deployment: True
-  fdf_deployment: True
+  fusion_deployment: true
+  fdf_deployment: true
   fusion_channel: v2.0
   fusion_pre_release_sds_version: 2.8.0
-  fusion_pre_release_image: 2.8.2-26546923
+  fusion_pre_release_image: 2.8.1-23197396
   fusion_pre_release: true
 
 
