Ensure that get_current_test_marks doesn't return misleading marks for utility tests
Signed-off-by: Sagi Hirshfeld <shirshfe@redhat.com>

--- a/pytest.ini
+++ b/pytest.ini
@@ -66,6 +66,7 @@ markers =
     rdr: marker for RDR related tests
     mdr: marker for MDR related tests
     ignore_owner: marker to ignore test during squad decorator check in pytest collection
+    ocs_ci_utility: marker for tests that only serve as utility for ocs-ci
     mcg: marker for MCG related tests
     rgw: marker for RGW related tests
     skipif_ocp_version: marker we use for skipping tests on particular OCP version
