add-hyperconverged-into-dependencies
Signed-off-by: Daniel Osypenko <dosypenk@redhat.com>

--- a/conf/examples/provider_mode_ibm_cloud_baremetal_kubevirt_clients.yaml
+++ b/conf/examples/provider_mode_ibm_cloud_baremetal_kubevirt_clients.yaml
@@ -11,6 +11,8 @@ DEPLOYMENT:
   metallb_operator: true
   cnv_latest_stable: true
   local_storage: true
+  mce_deployment: false # use when unreleased version on Clients is needed
+  deploy_hyperconverged: false # use when unreleased version on Clients is needed
 ENV_DATA:
   platform: "hci_baremetal"
   cluster_type: "provider" # it is necessary to run the Hosted clusters deployment on the Provider cluster
