--- a/ocs_ci/framework/conf/default_config.yaml
+++ b/ocs_ci/framework/conf/default_config.yaml
@@ -241,6 +241,10 @@ ENV_DATA:
   rhel8_template: 'rhel87_ocs4qe'
   # ACM HUB deployment
   deploy_acm_hub_cluster: false
+  # HyperConverged deployment
+  deploy_hyperconverged: false
+  # mce deployment
+  deploy_mce: false
 
   # Managed service git stat  default configurations
   # Managed StorageCluster size in TiB
