--- a/conf/examples/provider_mode_ibm_cloud_baremetal_kubevirt_clients.yaml
+++ b/conf/examples/provider_mode_ibm_cloud_baremetal_kubevirt_clients.yaml
@@ -11,7 +11,6 @@ DEPLOYMENT:
   metallb_operator: true
   cnv_latest_stable: true
   local_storage: true
-  mce_deployment: false # use when unreleased version on Clients is needed
   deploy_hyperconverged: false # use when unreleased version on Clients is needed
 ENV_DATA:
   platform: "hci_baremetal"
@@ -21,6 +20,7 @@ ENV_DATA:
   acm_hub_channel: "release-2.10" # this is an example, please provide the desired version
   hcp_version: "4.16" # this is an example, please provide the desired version
   metallb_version: "4.16" # this is an example, please provide the desired version
+  deploy_mce: false # second option to enable multicluster setup; used instead of ACM
   clusters: # the list of the Hosted clusters and their configuration. If field does not exist HostedClsuter installation will be skipped
     hcp415-bm3-e: # the field name is the name of the Hosted cluster
       hosted_cluster_path: "~/clusters/hcp416-bm3-e/openshift-cluster-dir" # path to store auth_path dir or cluster related files
