DisableStorageClass and DisableSnapshotClass fields are deprecated
Signed-off-by: Daniel Osypenko <dosypenk@redhat.com>

--- a/ocs_ci/templates/ocs-deployment/provider-mode/ocs_storagecluster.yaml
+++ b/ocs_ci/templates/ocs-deployment/provider-mode/ocs_storagecluster.yaml
@@ -13,16 +13,11 @@ spec:
   flexibleScaling: true
   hostNetwork: true
   managedResources:
-    cephBlockPools:
-      disableSnapshotClass: true
-      disableStorageClass: true
-      reconcileStrategy: ignore
+    cephBlockPools: {}
     cephCluster: {}
     cephConfig: {}
     cephDashboard: {}
-    cephFilesystems:
-      disableSnapshotClass: true
-      disableStorageClass: true
+    cephFilesystems: {}
     cephNonResilientPools: {}
     cephObjectStoreUsers: {}
     cephObjectStores:
