Adjust tox to be working again after pytest upgrade
Signed-off-by: Petr Balogh <pbalogh@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,8 @@ deps =
     pytest-cov
 commands = py.test \
     --ignore=tests \
+    --ignore=.tox \
+    --import-mode=importlib \
     -c pytest_unittests.ini \
     --cov=ocs_ci \
     {posargs}
