--- a/pytest.ini
+++ b/pytest.ini
@@ -85,5 +85,6 @@ log_format = %(asctime)s - %(threadName)s - %(name)s - %(levelname)s %(clusterct
 log_cli=true
 log_cli_level = INFO
 log_level = DEBUG
-addopts = --ignore=ocs_ci --show-capture=no --capture=no --show-progress
+addopts = --ignore=ocs_ci --ignore=.tox --import-mode=importlib --show-capture=no --capture=no --show-progress
 testpaths = tests
+norecursedirs = .tox
