Update pytest-html report for new version
Signed-off-by: Petr Balogh <pbalogh@redhat.com>

--- a/pytest.ini
+++ b/pytest.ini
@@ -88,3 +88,4 @@ log_level = DEBUG
 addopts = --ignore=ocs_ci --ignore=.tox --import-mode=importlib --show-capture=no --capture=no --show-progress
 testpaths = tests
 norecursedirs = .tox
+generate_report_on_test = True
