Rebase Recipe with checkhooks necessary configs
Signed-off-by: Shrivaibavi Raghaventhiran <sraghave@redhat.com>

--- a/conf/ocsci/dr_workload.yaml
+++ b/conf/ocsci/dr_workload.yaml
@@ -114,6 +114,11 @@ ENV_DATA:
       dr_workload_app_placement_name: "busybox-dict-1-rbd",
       multi_ns_dr_workload_app_pvc_selector_key: "workloadpattern",
       multi_ns_dr_workload_app_pvc_selector_value: "simple_io_pvc",
+      dr_workload_app_recipe_name_key: "name",
+      dr_workload_app_recipe_name_value: "busybox-dict-1",
+      dr_workload_app_recipe_namespace_key: "namespace",
+      dr_workload_app_recipe_namespace_value: "busybox-dict-1",
+      dr_workload_app_recipe_name_selector_value: "busybox-*",
     },
      { name: "busybox-dict-2-rbd", workload_dir: "rdr/busybox/rbd/workloads/app-busybox-2",
        pod_count: 10, pvc_count: 10,
@@ -138,6 +143,11 @@ ENV_DATA:
       dr_workload_app_placement_name: "busybox-dict-1-cephfs",
       multi_ns_dr_workload_app_pvc_selector_key: "workloadpattern",
       multi_ns_dr_workload_app_pvc_selector_value: "simple_io_pvc",
+      dr_workload_app_recipe_name_key: "name",
+      dr_workload_app_recipe_name_value: "busybox-dict-1",
+      dr_workload_app_recipe_namespace_key: "namespace",
+      dr_workload_app_recipe_namespace_value: "busybox-dict-1",
+      dr_workload_app_recipe_name_selector_value: "busybox-*",
 
     },
     { name: "busybox-dict-2-cephfs", workload_dir: "rdr/busybox/cephfs/workloads/app-busybox-2",
