--- a/conf/deployment/vsphere/upi_1az_rhcos_multus_public_vsan_3m_3w.yaml
+++ b/conf/deployment/vsphere/upi_1az_rhcos_multus_public_vsan_3m_3w.yaml
@@ -15,6 +15,7 @@ ENV_DATA:
   is_multus_enabled: true
   multus_create_public_net: true
   multus_create_cluster_net: false
+  multus_cluster_net_namespace: "default"
   multus_public_net_namespace: "default"
 REPORTING:
   polarion:
