--- a/conf/deployment/vsphere/upi_1az_rhcos_multus_vmfs_3m_3w.yaml
+++ b/conf/deployment/vsphere/upi_1az_rhcos_multus_vmfs_3m_3w.yaml
@@ -13,6 +13,13 @@ ENV_DATA:
   compute_memory: '65536'
   fio_storageutilization_min_mbps: 10.0
   is_multus_enabled: true
+  multus_public_net_interface: "ens224"
+  multus_cluster_net_interface: "ens224"
+  multus_create_public_net: true
+  multus_create_cluster_net: true
+  multus_public_net_namespace: "default"
+  multus_cluster_net_namespace: "default"
+
 REPORTING:
   polarion:
     deployment_id: 'OCS-2510'
