Ignore F824 in flake8
Signed-off-by: Petr Balogh <pbalogh@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -30,7 +30,7 @@ commands = flake8 ocs_ci tests
 
 [flake8]
 basepython = python3
-ignore = E203, E402, E741, W503
+ignore = E203, E402, E741, W503, F824
 enable-extensions = M511
 exclude =
     venv,
