Add more code for NFS setup and test pv-pool backingstore creating using NFS SC
Signed-off-by: Mahesh Shetty <mashetty@Maheshs-MacBook-Pro.local>

--- a/ocs_ci/templates/nfs/cluster-role-binding.yaml
+++ b/ocs_ci/templates/nfs/cluster-role-binding.yaml
@@ -6,7 +6,7 @@ subjects:
   - kind: ServiceAccount
     name: nfs-client-provisioner
     # replace with namespace where provisioner is deployed
-    namespace: openshift-nfs-storage
+    namespace: nfs-storage
 roleRef:
   kind: ClusterRole
   name: nfs-client-provisioner-runner
