--- a/ocs_ci/templates/nfs/nfs_sa.yaml
+++ b/ocs_ci/templates/nfs/nfs_sa.yaml
@@ -3,4 +3,4 @@ kind: ServiceAccount
 metadata:
   name: nfs-client-provisioner
   # replace with namespace where provisioner is deployed
-  namespace: openshift-nfs-storage
+  namespace: nfs-storage
