--- a/ocs_ci/templates/nfs/role-binding.yaml
+++ b/ocs_ci/templates/nfs/role-binding.yaml
@@ -3,12 +3,12 @@ apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: leader-locking-nfs-client-provisioner
   # replace with namespace where provisioner is deployed
-  namespace: openshift-nfs-storage
+  namespace: nfs-storage
 subjects:
   - kind: ServiceAccount
     name: nfs-client-provisioner
     # replace with namespace where provisioner is deployed
-    namespace: openshift-nfs-storage
+    namespace: nfs-storage
 roleRef:
   kind: Role
   name: leader-locking-nfs-client-provisioner
