--- a/ocs_ci/templates/nfs/role.yaml
+++ b/ocs_ci/templates/nfs/role.yaml
@@ -3,7 +3,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: leader-locking-nfs-client-provisioner
   # replace with namespace where provisioner is deployed
-  namespace: openshift-nfs-storage
+  namespace: nfs-storage
 rules:
   - apiGroups: [""]
     resources: ["endpoints"]
