Added Network Fault Injection scenario for ODF Resiliency Testing
Signed-off-by: Parag Kamble <pakamble@redhat.com>

--- a/ocs_ci/resiliency/conf/platform_failures.yaml
+++ b/ocs_ci/resiliency/conf/platform_failures.yaml
@@ -16,5 +16,10 @@ FAILURES:
     WORKLOAD:
       - FIO
       - VDBENCH
+  PLATFORM_NETWORK_FAULTS:
+    FAILURE_DURATION: 60
+    WORKLOAD:
+      - FIO
+      - VDBENCH
   PLATFORM_DISK_FAILURES:
     FAILURE_DURATION: 30
