--- a/ocs_ci/resiliency/conf/resiliency.yaml
+++ b/ocs_ci/resiliency/conf/resiliency.yaml
@@ -10,6 +10,7 @@ RESILIENCY:
       - PLATFORM_ZONE_FAILURES
       - PLATFORM_NETWORK_FAILURES
       - PLATFORM_DISK_FAILURES
+      - PLATFORM_NETWORK_FAULTS
     APPLICATION_FAILURES:
       - NODE_REBOOT
       - NODE_FAILURES
