Changes related to ocs-workloads
Signed-off-by: Shrivaibavi Raghaventhiran <sraghave@redhat.com>

--- a/ocs_ci/templates/DR/drpc_with_recipe.yaml
+++ b/ocs_ci/templates/DR/drpc_with_recipe.yaml
@@ -2,7 +2,7 @@ apiVersion: ramendr.openshift.io/v1alpha1
 kind: DRPlacementControl
 metadata:
   name: PLACEHOLDER
-  namespace: openshift-gitops
+  namespace: openshift-dr-ops
 spec:
   drPolicyRef:
     apiVersion: ramendr.openshift.io/v1alpha1
