--- a/ocs_ci/templates/DR/recipe_with_checkhooks.yaml
+++ b/ocs_ci/templates/DR/recipe_with_checkhooks.yaml
@@ -17,19 +17,10 @@ spec:
     - PLACEHOLDER
     labelSelector:
       matchExpressions:
-      - key: appname
+      - key: workloadpattern
         operator: In
         values:
-        - busybox_app1-1
-        - busybox_app1-2
-        - busybox_app1-3
-        - busybox_app1-4
-        - busybox_app1-5
-        - busybox_app1-6
-        - busybox_app1-7
-        - busybox_app1-8
-        - busybox_app1-9
-        - busybox_app1_10
+        - PLACEHOLDER
     name: PLACEHOLDER
     type: resource
   workflows:
@@ -48,7 +39,7 @@ spec:
     type: check
     namespace: PLACEHOLDER
     selectResource: deployment
-    nameSelector: "busybox-*"
+    nameSelector: PLACEHOLDER
     timeout: 800
     onError: fail
     chks:
@@ -66,13 +57,4 @@ spec:
       - key: appname
         operator: In
         values:
-        - busybox_app1-1
-        - busybox_app1-2
-        - busybox_app1-3
-        - busybox_app1-4
-        - busybox_app1-5
-        - busybox_app1-6
-        - busybox_app1-7
-        - busybox_app1-8
-        - busybox_app1-9
-        - busybox_app1_10
+        - PLACEHOLDER
