new onboarding procedure for client
Signed-off-by: Daniel Osypenko <dosypenk@redhat.com>

--- a/ocs_ci/templates/ocs-deployment/provider-mode/storage_consumer.yaml
+++ b/ocs_ci/templates/ocs-deployment/provider-mode/storage_consumer.yaml
@@ -1,13 +1,16 @@
 apiVersion: ocs.openshift.io/v1alpha1
 kind: StorageConsumer
 metadata:
+  namespace: openshift-storage
   name: sample-storageconsumer
 spec:
-  enable: true
+  # should be not enabled, this setting allows operator to create secret
+  enable: false
   resourceNameMappingConfigMap:
     name: ""
   storageClasses: []
-  storageQuotaInGiB: ""
+#  optional value storageQuotaInGiB, storage will be without quota
+#  storageQuotaInGiB: ""
   volumeGroupSnapshotClasses: []
   volumeSnapshotClasses: []
 # status:
