--- a/conf/upgrade/rbd_update_strategy_50p.yaml
+++ b/conf/upgrade/rbd_update_strategy_50p.yaml
@@ -1,11 +1,11 @@
 ---
-# This configuration file is for defining update strategy for CEPHFS CSI Plugin
+# This configuration file is for defining update strategy for RBD Plugin
 # Part of Epic RHSTOR-5280- Reduce the time required to upgrade ODF
-# This is supported from 4.18 and above version .
-# Config Specifically for test scenario OCS-5280
+# This is supported from 4.18 and above version.
+# Config Specifically for test scenario OCS-6708
 
 REPORTING:
   polarion:
-    upgrade_id: 'OCS-5280'
+    upgrade_id: 'OCS-6708'
 UPGRADE:
-  csi_cephfs_plugin_update_strategy_max_unavailable: 50%
+  csi_rbd_plugin_update_strategy_max_unavailable: 50%
